--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -46,6 +46,7 @@
          --red: #dc3545;
           --nblack2: #46494c;
         --typesetter_black: #373a3d;
+        --blue: blue;
         }
 
        #view1 {
