notes with term[@type, @target, @xml:id] linking to transcription

--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -18,6 +18,9 @@ body {
 .note .term {
     font-style: normal;
 }
+.term.highlightTarget {
+    color:  var(--blue, blue);
+}
 .retrace {
     font-weight: 1000;
 }
