mapping for note in app

--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -125,7 +125,7 @@
                          <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
                             </pb-view>  
                     <div id="content">
-                    <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-notes" subscribe="transcription">
+                    <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
                                                 <pb-param name="view" value="normalized"/>
                                             </pb-view>
                     </div>
