--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -31,6 +31,9 @@ body {
     position: absolute;
     top: 2.5em;
 }
+.sic {
+    font-weight: bold;
+}
 .sicCor:has(.overwrittenSic){
     position: inline-block;
     height: 3.5em;
