--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -1,7 +1,7 @@
 <app-toolbar class="toolbar" sticky="sticky">
     <div id="toolbar-before" style="display: none"/>
-    <paper-icon-button id="tocToggle" class="toc-toggle" icon="icons:view-list" data-template="pages:check-toc"/>
-    <a id="toolbar-parent" href="${app}/index.html?collection=${collection}" data-i18n="[title]browse.documents" title="" data-template="pages:parse-params">
+    <paper-icon-button id="tocToggle" class="toc-toggle" icon="icons:view-list"/>
+    <a id="toolbar-parent" href="${app}/index.html?collection=${collection}" data-i18n="[title]browse.documents" title="" data-template="pages:check-toc">
         <paper-icon-button icon="icons:folder-open"/>
     </a>
     <div id="toolbar-start" style="display: none"/>
