--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -2,11 +2,15 @@
 
 div#content {
   margin-top: 200px;
-    /*position: fixed;*/
     width: 20%;
     position: relative;
     height: 100%;
+    
 }
+#appNotes {
+  
+}
+
 .edRefLB {
     display: none;
 }
