page info created

--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -7,7 +7,7 @@ body {
          --red: #dc3545;
 }
 .noteDiv {
-    position: fixed;
+  /*  position: fixed;*/
 }
 .note, .editor {
     font-style: italic;
