--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -125,10 +125,10 @@
                          <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
                             </pb-view>  
                     <div id="content">
-                        <div id="appNotes">
-                            
+                        <div id="fixedContent">
+                            <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription">
+                            </pb-view>
                             <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
-                                                <pb-param name="view" value="normalized"/>
                             </pb-view>
                         </div>
                     </div>
