--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -124,16 +124,16 @@
               
                          <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
                             </pb-view>  
-                    <div id="content">
+                  <!--  <div id="content">
                         <div id="fixedContent">
                             <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription">
                             </pb-view>
                             <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
                             </pb-view>
                         </div>
-                    </div>
-                          <!--  <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
-                                            </pb-facsimile> -->
+                    </div> -->
+                            <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
+                                            </pb-facsimile> 
                         
                 </main>
             </app-header-layout>
