--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -1,11 +1,13 @@
 @import url("../fonts/font.css");
 
-div#content {
-  margin-top: 200px;
+div#pageInfo {
+  margin-top: 30px;
     width: 20%;
     position: relative;
     height: 100%;
-    
+}
+.noDisplay {
+    display: none;   
 }
 #fixedContent {
   position: fixed;
