--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Surface"/>
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
-    <script src="resources/scripts/debug.js"/>
+    <script src="resources/scripts/myfunctions.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
         @font-face {
@@ -84,6 +84,7 @@
            
         }
         
+        
     
 
       /*  @media (max-width: 769px) {
@@ -122,17 +123,18 @@
                 <main class="content-body">
               
               
-                         <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
+                 <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
                             </pb-view>  
-                  <!--  <div id="content">
+                  <div id="pageInfo">
                         <div id="fixedContent">
-                            <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription">
-                            </pb-view>
-                            <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
-                            </pb-view>
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription">
+                                </pb-view>
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
+                                </pb-view>
+                            
                         </div>
-                    </div> -->
-                            <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
+                    </div>
+                    <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
                                             </pb-facsimile> 
                         
                 </main>
