dm and ed synoptic display, ed with dm correspondance

--- a/resources/odd/nietzsche-ed.css
+++ b/resources/odd/nietzsche-ed.css
@@ -1,4 +1,12 @@
-
+ pb-facs-link {
+            display: block;
+            margin-left: 7pt;
+            color: grey;
+            float: right;
+}
+.head {
+    text-align: center;
+}
 .edRefLB  {
     display: none;
 }
