--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -17,6 +17,7 @@
     <pb-zoom emit="transcription" direction="out" icon="icons:zoom-out"/>
     <span>
         <paper-icon-button id="toggleFacsimile" class="mynav" icon="image:photo" data-i18n="[title]myapp.menu.toggleFacsimile" data-target="#facsimile"/>
+        <paper-icon-button id="toggleED" class="mynav" icon="icons:chrome-reader-mode" data-i18n="[title]myapp.menu.toggleED" data-target="#edView"/>
         <paper-icon-button id="toggleInfo" class="mynav" icon="icons:description" data-i18n="[title]myapp.menu.toggleInfo" data-target="#pageInfo"/>
     </span>
     <pb-navigation emit="transcription" keyboard="left" subscribe="transcription" direction="backward" unit="page">
