--- a/resources/odd/nietzsche-ed.css
+++ b/resources/odd/nietzsche-ed.css
@@ -1,3 +1,9 @@
+.italic {
+    font-style: italic;
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
  pb-facs-link {
             display: block;
             margin-left: 7pt;
