--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -30,6 +30,7 @@ body {
 .overwrittenSic {
     position: absolute;
     top: 2.5em;
+    
 }
 .sic {
     font-weight: bold;
@@ -37,6 +38,7 @@ body {
 .sicCor:has(.overwrittenSic){
     position: inline-block;
     height: 3.5em;
+    width: 20em;
 }
 .choiceParent .overwrittenSic {
     display: none;
@@ -60,6 +62,9 @@ body {
 .small { color: black; padding: 3px; }
 .fw-box { background-color: #add8e6;}
 .popover { background-color: #F5F5F5; cursor: context-menu; color: inherit;}
+.sicCor .popover {
+    color: black;
+}
     .box, .editorCorrection { background-color: #F5F5F5; width: max-content; text-align: start;}
     .box .tooltip {
        display: none;
