--- a/templates/pages/ed.html
+++ b/templates/pages/ed.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="resources/images/favicon-64.png" sizes="64x64"/>
 
     <title data-template="config:app-title"/>
-    <meta name="description" content="Surface"/>
+    <meta name="description" content="Erstdruck"/>
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
     <script src="resources/scripts/myfunctions.js"/>
@@ -49,10 +49,7 @@
             height: var(--pb-facsimile-height);
         }
         
-        ._pb_panel {
-            height: var(--pb-facsimile-height);
-        }
-
+        
         #view1 pb-view {
             height: var(--pb-view-height);
             overflow: auto;
