--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -19,6 +19,9 @@
         <paper-icon-button id="toggleFacsimile" class="mynav" icon="image:photo" data-i18n="[title]myapp.menu.toggleFacsimile" data-target="#facsimile"/>
         <paper-icon-button id="toggleED" class="mynav" icon="icons:chrome-reader-mode" data-i18n="[title]myapp.menu.toggleED" data-target="#edView"/>
         <paper-icon-button id="toggleInfo" class="mynav" icon="icons:description" data-i18n="[title]myapp.menu.toggleInfo" data-target="#pageInfo"/>
+        <a id="timelineButton" data-i18n="[title]myapp.menu.showTimeline" data-template="pages:timeline-link">
+            <paper-icon-button id="showTimeline" class="mynav" icon="icons:history"/>
+        </a>
     </span>
     <pb-navigation emit="transcription" keyboard="left" subscribe="transcription" direction="backward" unit="page">
         <paper-icon-button icon="icons:chevron-left"/>
