scroll to hash pb-view after loading all pb-load

--- a/templates/pages/nietzsche-timeline.html
+++ b/templates/pages/nietzsche-timeline.html
@@ -81,7 +81,7 @@
                         </pb-view>
                     </section> -->
                     <main class="content-body">
-                        <pb-view id="view1" src="document1" xpath="//text/back/div1" column-separator=".tei-cb" view="single" subscribe="transcription" emit="transcription">
+                        <pb-view id="view1" no-scroll="no-scroll" src="document1" xpath="//text/back/div1" column-separator=".tei-cb" view="single" subscribe="transcription" emit="transcription">
                             <pb-param name="mode" value="timeline"/>
                         </pb-view>
                     </main>
