--- a/templates/pages/timeline.html
+++ b/templates/pages/timeline.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
     <script src="resources/scripts/myfunctions.js"/>
+    <script src="resources/scripts/timeline.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
     
@@ -89,7 +90,7 @@
                     </pb-view>
                 </section>
                   <main class="content-body">
-                       <pb-view src="document1" xpath="//teiHeader/profileDesc/creation/listChange" view="single" data-template="pages:timeline"/>
+                       <pb-view src="document1" no-scroll="no-scroll" xpath="//teiHeader/profileDesc/creation/listChange" view="single" emit="timeline" data-template="pages:timeline"/>
                        
                 </main>
                
