trying to figure out why api upload works with spatia, while front-end upload results in too much spiatia

--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -134,6 +134,8 @@
                         <div id="fixedContent">
                                 <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription">
                                 </pb-view>
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-change-info" subscribe="transcription">
+                                </pb-view>
                                 <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
                                 </pb-view>
                             
