--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="resources/images/favicon-64.png" sizes="64x64"/>
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
+    <script src="resources/scripts/debug.js"/>
     <custom-style>
     <style>
         main {
@@ -288,16 +289,26 @@
                                         <pb-custom-form class="options">
                                             <input type="hidden" name="collection" value="${collection}" data-template="pages:parse-params"/>
                                             <pb-select label="browse.sort" name="sort" value="${sort}" data-template="pages:parse-params">
-                                                <paper-item value="title"><pb-i18n key="browse.title"/></paper-item>
-                                                <paper-item value="author"><pb-i18n key="browse.author"/></paper-item>
+                                                <paper-item value="title">
+                                                        <pb-i18n key="browse.title"/>
+                                                    </paper-item>
+                                                <paper-item value="author">
+                                                        <pb-i18n key="browse.author"/>
+                                                    </paper-item>
                                             </pb-select>
                                             <pb-select label="search.scope" name="field" value="${field}" data-template="pages:parse-params">
-                                                <paper-item value="text"><pb-i18n key="search.content"/></paper-item>
-                                                <paper-item value="title"><pb-i18n key="search.title"/></paper-item>
+                                                <paper-item value="text">
+                                                        <pb-i18n key="search.content"/>
+                                                    </paper-item>
+                                                <paper-item value="title">
+                                                        <pb-i18n key="search.title"/>
+                                                    </paper-item>
                                             </pb-select>
                                         </pb-custom-form>
                                         <pb-search id="search-form" subscribe="search" data-template="pages:parse-params" value="${query}" subforms=".facets,.options" submit-on-load="submit-on-load">
-                                            <paper-button slot="searchButton"><pb-i18n key="search.search">Search</pb-i18n></paper-button>
+                                            <paper-button slot="searchButton">
+                                                    <pb-i18n key="search.search">Search</pb-i18n>
+                                                </paper-button>
                                         </pb-search>
                                         <pb-custom-form class="facets" url="api/search/facets" event="pb-results-received" subscribe="search" emit="search"/>
                                     </aside>
@@ -342,7 +353,9 @@
             </div>
         </paper-dialog>
         <paper-dialog id="errorDialog">
-            <h2><pb-i18n key="dialogs.error">Error</pb-i18n></h2>
+            <h2>
+                    <pb-i18n key="dialogs.error">Error</pb-i18n>
+                </h2>
             <paper-dialog-scrollable/>
             <div class="buttons">
                 <paper-button dialog-confirm="dialog-confirm" autofocus="autofocus">
