pageInfo: collapse content if needed

--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -132,11 +132,11 @@
                                 </pb-view>
                   <div id="pageInfo">
                         <div id="fixedContent">
-                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription">
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-page-info" subscribe="transcription" emit="pageInfo">
                                 </pb-view>
-                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-change-info" subscribe="transcription">
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-change-info" subscribe="transcription" emit="pageInfo">
                                 </pb-view>
-                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription">
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription" emit="pageInfo">
                                 </pb-view>
                             
                         </div>
