--- a/templates/pages/timeline.html
+++ b/templates/pages/timeline.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
     <script src="resources/scripts/myfunctions.js"/>
+    <script src="resources/scripts/myscroll.js"/>
     <script src="resources/scripts/timeline.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
