--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="resources/css/theme.css"/>
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
     <script src="resources/scripts/myfunctions.js"/>
+     <script src="resources/scripts/transcription.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
         @font-face {
@@ -47,6 +48,7 @@
           --nblack2: #46494c;
         --typesetter_black: #373a3d;
         --blue: blue;
+        --tpField: #CED5CE;
         }
        #edView {
            margin: auto;
