--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -127,7 +127,8 @@ ul.letters, ul.pages, ul.handNotes {
     div.hand.toggle .hand:not(.toggle),  div.hand.toggle .hand:not(.toggle) span  {
          background: var(--tpField, #CED5CE);
     }
-    .strikethrough-typesetter_black1.toggle, .strikethrough-Koeselitz_pencil.toggle, .strikethrough-N_brown1.toggle, .strikethrough-N_red.toggle  {
+    .strikethrough-typesetter_black1.toggle, .strikethrough-Koeselitz_pencil.toggle, .strikethrough-N_brown1.toggle, .strikethrough-N_red.toggle, .hatching-N_brown1.toggle, .hatching-N_brown2.toggle, .deleted-N_brown1.toggle, 
+    .deleted-N_brown2.toggle   {
         background: var(--highlight, yellow);
     }
    .red-marking:before { 
