--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -38,6 +38,7 @@
             --pb-grid-column-gap: 2em;
             --pb-facsimile-height: calc(var(--pb-view-height) - 22px);
          --highlight: yellow;
+         --delHighlight: gray;
          --pb-content-font-family: MyFont;
          --pb-content-font-size: 16px;
          --radius: 1em 1em;
