--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -44,12 +44,18 @@
          --radius: 1em 1em;
          --red-marking: red;
          --length: 0.2em;
-         --nbrown: #5C4033;
+         --nbrown: #9b6b56;
+         --nred: #ff0000;
+         --nblue: #0000ff;
          --red: #dc3545;
           --nblack2: #46494c;
-        --typesetter_black: #373a3d;
-        --blue: blue;
-        --tpField: #CED5CE;
+          --nblack: #000000;
+          --npencil: #9c9c9c;
+        --typesetter_black: #808080;
+        --fhblack: #808080;
+        --blue: var(--nblue, blue);
+        --tpFieldHubi: #f8f8f8;
+        --tpField: #e0e6e2fa;
         }
        #edView {
            margin: auto;
