--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -147,7 +147,7 @@
                                 </pb-view>
                                 <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-apps" subscribe="transcription" emit="pageInfo">
                                 </pb-view>
-                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-qv" subscribe="transcription" emit="pageInfo">
+                                <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-qv-head" subscribe="transcription" emit="pageInfo">
                                     <pb-param name="mode" value="querverweis"/>
                                 </pb-view>
                         </div>
